--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    // Hilt - DI
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -52,4 +55,14 @@ dependencies {
     def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    //RETROFIT IMPLEMENTATION TO HANDLE THE API
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation"com.squareup.okhttp3:logging-interceptor:4.10.0"
+    //GSO TO CONVERT
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    //Card View implementation
+    implementation "androidx.cardview:cardview:1.0.0"
+    //Hilt -> Dependency Injection
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
 }
